# custom_keylayout

./: .gitignore  Cargo.toml  README.md  build_layout.sh  kennytm.txt  sample.txt  simple-qwerty-en-us.xml
src/: main.rs  new_stdio.rs
tests/: test_parse_compose.rs
