[package]
name = "custom_keylayout"
description = "Custom OS X keylayout for compose key"
license = "GPL-3"
version = "0.2.0"
authors = ["kennytm <kennytm@gmail.com>"]
repository = "https://github.com/kennytm/custom_keylayout"
readme = "README.md"

# TODO Due to docopt/docopt.rs#108 we cannot use the latest rustc-serialize.

[dependencies]
regex = "0.*"
regex_macros = "0.*"
docopt = "0.*"
docopt_macros = "0.*"
rustc-serialize = "0.2.*"
handlebars = "0.*"
rand = "0.*"

[dependencies.literator]
git = "git://github.com/kmcallister/literator"

