[package]
name = "custom_keylayout"
description = "Custom OS X keylayout for compose key"
license = "GPL-3"
version = "0.2.0"
authors = ["kennytm <kennytm@gmail.com>"]
repository = "https://github.com/kennytm/custom_keylayout"
readme = "README.md"

[dependencies]
regex = "0.1.65"
lazy_static = "0.1.16"
docopt = "0.6.80"
serde_json = "0.7.0"
handlebars = { version = "0.16.0", features = ["serde_type"] }
rand = "0.3.14"
hex = "0.2.0"
encoding = "0.2.32" # <- remove dependency after Rust 1.8.0.

